; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/atf/atf-c/detail/extr_map.c_atf_map_iter_key.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/atf/atf-c/detail/extr_map.c_atf_map_iter_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.map_entry = type { i8* }
%struct.TYPE_3__ = type { %struct.map_entry* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @atf_map_iter_key(%struct.map_entry* %0) #0 {
  %2 = alloca %struct.TYPE_3__, align 8
  %3 = alloca %struct.map_entry*, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  store %struct.map_entry* %0, %struct.map_entry** %4, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  %6 = load %struct.map_entry*, %struct.map_entry** %5, align 8
  store %struct.map_entry* %6, %struct.map_entry** %3, align 8
  %7 = load %struct.map_entry*, %struct.map_entry** %3, align 8
  %8 = icmp ne %struct.map_entry* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @PRE(i32 %9)
  %11 = load %struct.map_entry*, %struct.map_entry** %3, align 8
  %12 = getelementptr inbounds %struct.map_entry, %struct.map_entry* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  ret i8* %13
}

declare dso_local i32 @PRE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
